--- a/MovieWebSite/MovieWebSite/MovieWebSite.csproj
+++ b/MovieWebSite/MovieWebSite/MovieWebSite.csproj
@@ -202,6 +202,8 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Actor.cs" />
+    <Compile Include="Models\Film.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
