Database added and Film Controller

--- a/MovieWebSite/MovieWebSite/MovieWebSite.csproj
+++ b/MovieWebSite/MovieWebSite/MovieWebSite.csproj
@@ -195,6 +195,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\FilmModelsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -208,6 +209,7 @@
     <Compile Include="Models\GenreModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MovieWebSiteContext.cs" />
     <Compile Include="Models\ReplyModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -274,6 +276,11 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\AllFilms.cshtml" />
+    <Content Include="Views\FilmModels\Create.cshtml" />
+    <Content Include="Views\FilmModels\Delete.cshtml" />
+    <Content Include="Views\FilmModels\Details.cshtml" />
+    <Content Include="Views\FilmModels\Edit.cshtml" />
+    <Content Include="Views\FilmModels\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
