--- a/MovieWebSite/MovieWebSite/Web.config
+++ b/MovieWebSite/MovieWebSite/Web.config
@@ -13,6 +13,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MovieWebSite-20190207014443.mdf;Initial Catalog=aspnet-MovieWebSite-20190207014443;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="MovieWebSiteContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MovieWebSiteContext-20190226134758; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MovieWebSiteContext-20190226134758.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
