--- a/.gitignore
+++ b/.gitignore
@@ -261,6 +261,12 @@ paket-files/
 __pycache__/
 *.pyc
 
+
+# Visual Studio 2015/2017 cache/options directory
+*.vs/
+
 *.cache
 *.sqlite
-**/*.vs
+**\*.vs
+**\Debug
+
